plugins/kotlin/idea/tests/testData/multiplatform/duplicateExpectsWithStrongIncompatibility/bottom/bottom.kt
actual fun <!LINE_MARKER("descr='Has expects in left module'")!>foo<!>(): Int = 42
